# haunted-house-system

./: gen_qr.py  main.py
haunted-house-api/: main.py  pyproject.toml
haunted-house-ui/: package-lock.json  package.json
haunted-house-ui/app/: layout.tsx  page.tsx
haunted-house-ui/app/admin/: page.tsx
